--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             interest in corporate structures and entrepreneurship. Known for
             strong communication, leadership, and people skills.
           </p>
-          <a href="#contact" class="btn">Get In Touch</a>
+          <a href="mailto:anushaxxxx@gmail.com" class="btn">Get In Touch</a>
         </div>
       </section>
     </main>
